# IS596-deepfake

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
deepguard/: __init__.py  app.py
deepguard/detection/: __init__.py  audio_encoder.py  fusion.py  visual_encoder.py
deepguard/interface/: __init__.py  legal_report.py  overlay.py  report.py
deepguard/reasoning/: __init__.py  llm_reasoner.py
deepguard/utils/: __init__.py  video.py
docs/: proposal.md  proposal.tex
tests/: test_audio_encoder.py  test_fusion.py  test_report.py  test_visual_encoder.py
